--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
-site_name: My Docs
+site_name: Academics Notes
 site_url: https://example.com/
 
 theme: windmill-dark
 
 nav:
   - Home: index.md
+  
